--- a/commande.html
+++ b/commande.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css"></link>
 
@@ -12,45 +13,68 @@
 </head>
 <body>
     <header class="container">
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-            <a class="navbar-brand" href="index.html">
-            <img src="img/orinoco.png" alt="Orinoco">
-            </a>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="index.html">Accueil</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="produits.html">Produits</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="commande.html">Commande</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="panier.html">Panier</a>
-                </li>
-            </ul>
-        </nav>
+        <div class="row">
+            <nav class="col navbar navbar-expand-md navbar-dark bg-dark">
+                <a class="navbar-brand" href="index.html">
+                <img src="img/orinoco.png" alt="Orinoco">
+                </a>
+                <div class="navbar-collapse">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">Accueil</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="produits.html">Produits</a>
+                        </li>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="commande.html">Commande</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="panier.html"><i class="bi bi-cart3"></i></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
     </header>
     <main class="container">
-        <div class="row">
-           <div class="col col-4-md">
-                <ul>
-                    <li>
-
-                    </li>
-                    <li>
-
-                    </li>
-                    <li>
-
-                    </li>
-                </ul>
-           </div>
+        <section class="row">
+            <h1 class="title">Merci pour votre commande enregistrée sous le n°<span class="cde"></span></h1>
+        </section>
+        <section class="row">
+            <form class="col" action="inscription" method="post">
+                <fieldset class="coordonnees">
+                    <legend>Vos Coordonnées</legend>
+                    <label for="nom">Nom</label>
+                    <input class="style_input" id="nom" name="nom" type="text"/>
+                    <label for="prenom">Prénom </label>
+                    <input class="style_input" id="prenom" name="prenom" type="text"/><br/>
+                    <label for="mail">Email</label>
+                    <input class="style_input" id="mail" name="mail" type="text"/><br/>
+                    <label>Rue</label>
+                    <input class="style_input" id="rue" name="rue" type="text"/><br/>
+                    <label>Code postal</label>
+                    <input class="style_input" id="code-postal" name="code-postal" type="text"/>
+                    <label>Ville</label>
+                    <input class="style_input" id="ville" name="ville" type="text"/>            
+                </fieldset>
+            </div>
         </div>
     </main>
-    <footer>
-
+    <footer class="bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <ul class="list-inline text-center">
+                        <li class="list-inline-item">Orinico</li>
+                        <li class="list-inline-item">&middot;</li>
+                        <li class="list-inline-item">2021</li>
+                        <li class="list-inline-item">&middot;</li>
+                        <li class="list-inline-item">Nos prochaines réalisations très bientôt</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </footer>
     
 
