--- a/index.html
+++ b/index.html
@@ -5,93 +5,118 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css"></link>
     <title>Orinoco</title>
 </head>
 <body>
     <header class="container">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="index.html">
-                <img src="img/orinoco.png" alt="Orinoco" id="orinoco">
-            </a>
-            <div class="navbar-collapse">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Accueil</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="produits.html">Produits</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="commande.html">Commande</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="panier.html">Panier</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+        <div class="row">
+            <nav class="col navbar navbar-expand-lg navbar-dark bg-dark">
+                <a class="navbar-brand" href="index.html">
+                    <img src="img/orinoco.png" alt="Orinoco" id="orinoco">
+                </a>
+                <div class="navbar-collapse">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="index.html">Accueil</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="produits.html">Produits</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="commande.html">Commande</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="panier.html"><i class="bi bi-cart3"></i></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
     </header>
     <main class="container">
         <article>
-            <h1 class="title">Venez rencontrer nos superbes ours en peluche faits main</h1>
+            <h1 class="title">Venez à la rencontre de nos superbes ours en peluche faits main</h1>
         </article>
         <section class="row row-teddy">
-                <div class="col-12 col-md-6">
-                    <div class="card">
-                        <div class="card-body">
+            <div class="col-12 col-md-6">
+                <div class="card">
+                    <div class="card-body card-body_a">
+                        <a href="produits.html">
                             <figure>
                                 <img src="img/teddy_1.jpg" class="d-block w-100" alt="ours en peluche Sam">
-                                <figcaption>Sam, gentil et très charmeur</figcaption>
+                                <figcaption><strong>Sam</strong>, gentil et très charmeur</figcaption>
                             </figure>
-                        </div>
+                        </a>
                     </div>
                 </div>
-                <div class="col-12 col-md-6">
-                    <div class="card">
-                        <div class="card-body">
+            </div>
+            <div class="col-12 col-md-6">
+                <div class="card">
+                    <div class="card-body card-body_a">
+                        <a href="produits.html">
                             <figure>
                                 <img src="img/teddy_2.jpg" class="d-block w-100" alt="ours en peluche Martin">
-                                <figcaption>Martin, tendre et tout doux</figcaption>
+                                <figcaption><strong>Martin</strong>, tendre et tout doux</figcaption>
                             </figure>
-                        </div>
+                        </a>
                     </div>
                 </div>
-                <div class="col-12 col-md-6">
-                    <div class="card">
-                        <div class="card-body">
+            </div>
+            <div class="col-12 col-md-6">
+                <div class="card">
+                    <div class="card-body card-body_a">
+                        <a href="produits.html">
                             <figure>
                                 <img src="img/teddy_3.jpg" class="d-block w-100" alt="ours en peluche Bob">
-                                <figcaption>Bob et son inséparable doudou</figcaption>
+                                <figcaption><strong>Bob</strong> et son inséparable doudou</figcaption>
                             </figure>
-                        </div>
+                        </a>
                     </div>
                 </div>
-                <div class="col-12 col-md-6">
-                    <div class="card">
-                        <div class="card-body">
+            </div>
+            <div class="col-12 col-md-6">
+                <div class="card">
+                    <div class="card-body card-body_a">
+                        <a href="produits.html">
                             <figure>
                                 <img src="img/teddy_4.jpg" class="d-block w-100" alt="ours en peluche Léo">
-                                <figcaption>Léo, votre futur fan</figcaption>
+                                <figcaption><strong>Léo</strong>, votre futur fan</figcaption>
                             </figure>
-                        </div>
+                        </a>
                     </div>
                 </div>
-                <div class="col-12 col-md-6">
-                    <div class="card">
-                        <div class="card-body">
+            </div>
+            <div class="col-12 col-md-6">
+                <div class="card">
+                    <div class="card-body card-body_a">
+                        <a href="produits.html">
                             <figure>
                                 <img src="img/teddy_5.jpg" class="d-block w-100" alt="ours en peluche Tom">
-                                <ficaption>Tom, en manque d'affection</ficaption>
+                                <figcaption><strong>Tom</strong>, en manque d'affection</figcaption>
                             </figure>
-                        </div>  
-                    </div>            
-                </div>
+                        </a>
+                    </div>  
+                </div>            
+            </div>
         </section>
     </main>
-    <footer>
-
+    <footer class="bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <ul class="list-inline text-center">
+                        <li class="list-inline-item">Orinico</li>
+                        <li class="list-inline-item">&middot;</li>
+                        <li class="list-inline-item">2021</li>
+                        <li class="list-inline-item">&middot;</li>
+                        <li class="list-inline-item">Nos prochaines réalisations très bientôt</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </footer>
     
 
