--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Handlee&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css"></link>
+
     <title>Orinoco</title>
+
 </head>
+
+
 <body>
+
     <header class="container">
         <div class="row">
             <nav class="col navbar navbar-expand-lg navbar-dark bg-dark">
@@ -36,73 +44,18 @@
             </nav>
         </div>
     </header>
+
     <main class="container">
         <article>
             <h1 class="title">Venez à la rencontre de nos superbes ours en peluche faits main</h1>
         </article>
         <section class="row row-teddy">
             <div class="col-12 col-md-6">
-                <div class="card">
-                    <div class="card-body card-body_a">
-                        <a href="produits.html">
-                            <figure>
-                                <img src="img/teddy_1.jpg" class="d-block w-100" alt="ours en peluche Sam">
-                                <figcaption><strong>Sam</strong>, gentil et très charmeur</figcaption>
-                            </figure>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-md-6">
-                <div class="card">
-                    <div class="card-body card-body_a">
-                        <a href="produits.html">
-                            <figure>
-                                <img src="img/teddy_2.jpg" class="d-block w-100" alt="ours en peluche Martin">
-                                <figcaption><strong>Martin</strong>, tendre et tout doux</figcaption>
-                            </figure>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-md-6">
-                <div class="card">
-                    <div class="card-body card-body_a">
-                        <a href="produits.html">
-                            <figure>
-                                <img src="img/teddy_3.jpg" class="d-block w-100" alt="ours en peluche Bob">
-                                <figcaption><strong>Bob</strong> et son inséparable doudou</figcaption>
-                            </figure>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-md-6">
-                <div class="card">
-                    <div class="card-body card-body_a">
-                        <a href="produits.html">
-                            <figure>
-                                <img src="img/teddy_4.jpg" class="d-block w-100" alt="ours en peluche Léo">
-                                <figcaption><strong>Léo</strong>, votre futur fan</figcaption>
-                            </figure>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-md-6">
-                <div class="card">
-                    <div class="card-body card-body_a">
-                        <a href="produits.html">
-                            <figure>
-                                <img src="img/teddy_5.jpg" class="d-block w-100" alt="ours en peluche Tom">
-                                <figcaption><strong>Tom</strong>, en manque d'affection</figcaption>
-                            </figure>
-                        </a>
-                    </div>  
-                </div>            
+
             </div>
         </section>
     </main>
+
     <footer class="bg-light">
         <div class="container">
             <div class="row">
@@ -117,12 +70,13 @@
                 </div>
             </div>
         </div>
-    </footer>
-    
+    </footer>    
 
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <!-- script JS Bootstrap -->
+    <script src="js/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
 </body>
+
 </html>
