--- a/commande.html
+++ b/commande.html
@@ -10,7 +10,9 @@
 
     <title>Orinoco</title>
 </head>
+
 <body>
+
     <header class="container">
         <div class="row">
             <nav class="col navbar navbar-expand-md navbar-dark bg-dark">
@@ -36,6 +38,7 @@
             </nav>
         </div>
     </header>
+
     <main class="container">
         <section class="row">
             <h1 class="title">Merci pour votre commande enregistrée sous le n°<span class="cde"></span></h1>
@@ -43,12 +46,13 @@
         <section class="row">
         </section>
     </main>
+
     <footer class="bg-light">
         <div class="container">
             <div class="row">
                 <div class="col">
                     <ul class="list-inline text-center">
-                        <li class="list-inline-item">Orinico</li>
+                        <li class="list-inline-item">Orinoco</li>
                         <li class="list-inline-item">&middot;</li>
                         <li class="list-inline-item">2021</li>
                         <li class="list-inline-item">&middot;</li>
@@ -59,8 +63,7 @@
         </div>
     </footer>
     
-
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="js/commande.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 </body>
