--- a/index.html
+++ b/index.html
@@ -35,9 +35,6 @@
                         <li class="nav-item">
                             <a class="nav-link" href="panier.html">Panier</i></a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="commande.html">Commande</a>
-                        </li>
                     </ul>
                 </div>
             </nav>
@@ -48,9 +45,7 @@
         <article>
             <h1 class="title">Venez à la rencontre de nos superbes ours en peluche faits main</h1>
         </article>
-            <section class="row row-teddy" id="nounours">
-
-            </section>
+            <section class="row row-teddy" id="nounours"></section>
     </main>
 
     <footer class="bg-light">
@@ -58,7 +53,7 @@
             <div class="row">
                 <div class="col">
                     <ul class="list-inline text-center">
-                        <li class="list-inline-item">Orinico</li>
+                        <li class="list-inline-item">Orinoco</li>
                         <li class="list-inline-item">&middot;</li>
                         <li class="list-inline-item">2021</li>
                         <li class="list-inline-item">&middot;</li>
@@ -69,11 +64,8 @@
         </div>
     </footer>    
 
-    <!-- script JS Bootstrap -->
     <script src="js/index.js"></script>
-   <!-- <script src="js/index3.js"></script>  -->
-    <!--<script src="js/index2.js"></script> -->
-    <!--<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>-->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 
 </body>
