--- a/panier.html
+++ b/panier.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +11,9 @@
 
     <title>Orinoco, votre panier</title>
 </head>
+
 <body>
+
     <header class="container">
         <div class="row">
             <nav class="col navbar navbar-expand-lg navbar-dark bg-dark">
@@ -28,14 +31,12 @@
                         <li class="nav-item active">
                             <a class="nav-link" href="panier.html">Panier</i></i></a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="commande.html">Commande</a>
-                        </li>
                     </ul>
                 </div>
             </nav>
         </div>
     </header>
+
     <main class="container">
         <div class="row">
            <div class="col col-4-md">
@@ -44,26 +45,24 @@
                     <thead>
                         <tr>
                             <th>Modèle</th>
-                            <th>Quantité</th>
-                            <th>Prix</th>
+                            <th>Référence</th>
+                            <th>Nom</th>
+                            <th>Prix (€)</th>
                         </tr>
                     </thead>
-                    <tbody class="teddy-list">
-                        <tr>
-                            <td>
+                    <tbody id="panier">
 
-                            </td>
-                        </tr>
                     </tbody>
                     <tfoot>
-                        <tr>
-                            <td>TOTAL en euros</td>
-
+                        <tr id="montant">
+                            <td></td>
+                            <td></td>
                         </tr>
                     </tfoot>
                 </table>
            </div>
         </div>
+
         <form class="col" action="inscription" method="post">
             <fieldset class="coordonnees">
                 <legend class="text-center">Mes Coordonnées</legend>
@@ -104,14 +103,17 @@
                 </div>       
             </fieldset>
         </form>
+
         <button class="valide-commande" type="submit">Je valide ma commande</button>
+
     </main>
+
     <footer class="bg-light">
         <div class="container">
             <div class="row">
                 <div class="col">
                     <ul class="list-inline text-center">
-                        <li class="list-inline-item">Orinico</li>
+                        <li class="list-inline-item">Orinoco</li>
                         <li class="list-inline-item">&middot;</li>
                         <li class="list-inline-item">2021</li>
                         <li class="list-inline-item">&middot;</li>
@@ -122,8 +124,6 @@
         </div>
     </footer>
     
-
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="js/panier.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
