--- a/produits.html
+++ b/produits.html
@@ -10,6 +10,7 @@
 
     <title>Orinoco</title>
 </head>
+
 <body>
     <header class="container">
         <div class="row">
@@ -28,28 +29,25 @@
                         <li class="nav-item">
                             <a class="nav-link" href="panier.html">Panier</i></a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="commande.html">Commande</a>
-                        </li>
                     </ul>
                 </div>
             </nav>
         </div>
     </header>
+
     <main class="container">
         <article>
             <h1 class="title">Choisissez votre modèle</h1>
         </article>
-        <section class="row row-teddy" id="thenounours">
-
-        </section>
+        <section class="row row-teddy" id="thenounours"></section>
     </main>
+
     <footer class="bg-light">
         <div class="container">
             <div class="row">
                 <div class="col">
                     <ul class="list-inline text-center">
-                        <li class="list-inline-item">Orinico</li>
+                        <li class="list-inline-item">Orinoco</li>
                         <li class="list-inline-item">&middot;</li>
                         <li class="list-inline-item">2021</li>
                         <li class="list-inline-item">&middot;</li>
@@ -60,8 +58,6 @@
         </div>
     </footer>
     
-
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="js/produits.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
