--- a/commande.html
+++ b/commande.html
@@ -40,8 +40,7 @@
     </header>
 
     <main class="container">
-        <section class="row">
-            <h1 class="title">Merci pour votre commande enregistrée sous le n°<span class="cde"></span></h1>
+        <section class="row" id="cde">
         </section>
         <section class="row">
         </section>
