--- a/panier.html
+++ b/panier.html
@@ -51,19 +51,16 @@
                         </tr>
                     </thead>
                     <tbody id="panier">
-
                     </tbody>
                     <tfoot>
                         <tr id="montant">
-                            <td></td>
-                            <td></td>
                         </tr>
                     </tfoot>
                 </table>
            </div>
         </div>
 
-        <form class="col" action="inscription" method="post">
+        <form class="col" method="post">
             <fieldset class="coordonnees">
                 <legend class="text-center">Mes Coordonnées</legend>
                 <div class="formulaire">
@@ -104,7 +101,7 @@
             </fieldset>
         </form>
 
-        <button class="valide-commande" type="submit">Je valide ma commande</button>
+        <button class="valide-commande" type="button">Je valide ma commande</button>
 
     </main>
 
